--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,18 @@
+spring: 
+  datasource:
+    url: jdbc:h2:file:./eventmanagement.db
+    driverClassName: org.h2.Driver
+    username: sa
+    password: sa
+    
+  h2:
+    console:
+      enabled: true
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: validate # validate update create create-drop
+
 event-magagement:
   users:
     - 
