--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,19 +1,13 @@
 spring: 
   datasource:
-    url: jdbc:h2:file:./eventmanagement.db
+    url: jdbc:h2:mem:test
     driverClassName: org.h2.Driver
     username: sa
     password: sa
     
   h2:
     console:
-      enabled: true
-
-flyway:
-  url: jdbc:h2:file:./eventmanagement.db
-  schemas: PUBLIC
-  user: sa
-  password: sa
+      enabled: false
 
 event-magagement:
   users:
