--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,19 @@
 spring:
   flyway:
     baseline-on-migrate: true
-    
-event-magagement:
+
+login:
+  remember-me:
+    key: "tuajthenafefg92356efgnaert"
+
+
+event-management:
   users:
-    - 
-      username: dacapo
+    - username: dacapo
       password: "{bcrypt}$2a$10$Cf5rOfI9sqO7nnYKg8Y8JeeBvxn00X.TSYZw3VdP5OfZ6J0X6H3KC"
       roles:
         - USER
-    -
-      username: admin
+    - username: admin
       password: "{bcrypt}$2a$10$Cf5rOfI9sqO7nnYKg8Y8JeeBvxn00X.TSYZw3VdP5OfZ6J0X6H3KC"
       roles:
         - ADMIN
