--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:mem:test;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
     driverClassName: org.h2.Driver
     username: sa
     password: sa
