--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.0</version>
+        <version>3.5.4</version>
         <relativePath/>
     </parent>
     <groupId>de.tigges</groupId>
     <artifactId>event-management</artifactId>
-    <version>1.1.2</version>
+    <version>1.1.3</version>
     <name>event-management</name>
     <description>Backend for Event Management System</description>
     <properties>
@@ -67,6 +67,26 @@
 
     <build>
         <plugins>
+            <!--
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <version>0.10.4</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>build-native</id>
+                        <goals>
+                            <goal>compile-no-fork</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>de.tigges.eventmanagement.EventManagementApplication</mainClass>
+                </configuration>
+            </plugin>
+            -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
